# mdmi-cli

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: always.mdc
.github/workflows/: build.yml  ci.yml  publish.yml
mdmi/: __init__.py  cli.py  fake_midi_interface.py  fm_operator.py  midi_interface.py  mido_midi_interface.py  preset.py  preset_parsers.py  sysex_generator.py  ui.py  util.py
mdmi/commands/: __init__.py  clear_all_presets.py  clear_preset.py  common.py  dump_channel.py  dump_common.py  dump_preset.py  list_ports.py  list_wopn.py  load_preset.py  perf_test.py  ping.py
mdmi/presets/: dmp.py  dmp_parser.py  tfi.py  tfi_parser.py  wopn.py  wopn_bank.py  wopn_parser.py
tests/: __init__.py  test_cli.py  test_cli_basic.py  test_cli_performance.py  test_cli_presets.py  test_e2e.py  test_e2e_new_parsers.py  test_midi_interface.py  test_perf_test.py  test_preset_parsers.py  test_real_data.py  test_sysex_generator.py
