[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdmi-cli"
dynamic = ["version"]
description = "CLI tool for working with the Mega Drive MIDI Interface (MDMI)"
authors = [{ name = "rhargreaves" }]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["midi", "sysex", "mega-drive", "fm-synthesis", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "mido>=1.2.10",
    "bitstruct>=8.15.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "ruff>=0.1.0"]

[project.scripts]
mdmi = "mdmi.cli:main"

[project.urls]
Homepage = "https://github.com/rhargreaves/mdmi-cli"
Repository = "https://github.com/rhargreaves/mdmi-cli"
Issues = "https://github.com/rhargreaves/mdmi-cli/issues"

[tool.setuptools.dynamic]
version = { attr = "mdmi.__version__" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
